--- a/index.html
+++ b/index.html
@@ -1,34 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaxWizard: Your Smart Filing Companion</title>
-    <link rel="stylesheet" href="/static/styles.css">
 </head>
+<style>
+    body {
+        font-family: 'Segoe UI', Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(135deg, #74ebd5, #acb6e5);
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .chat-container {
+        width: 600px;
+        background: rgba(255, 255, 255, 0.95);
+        border-radius: 20px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        padding: 20px;
+        overflow: hidden;
+    }
+
+    .chat-header {
+        text-align: center;
+        padding: 10px 0;
+        border-bottom: 2px solid #74ebd5;
+    }
+
+    .chat-header h1 {
+        margin: 0;
+        font-size: 24px;
+        color: #333;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+    }
+
+    .chat-body {
+        max-height: 400px;
+        overflow-y: auto;
+        padding: 15px;
+    }
+
+    .message {
+        padding: 10px 15px;
+        border-radius: 15px;
+        margin: 10px 0;
+        max-width: 80%;
+        word-wrap: break-word;
+        animation: fadeIn 0.3s ease-in;
+    }
+
+    .bot-message {
+        background: #e0f7fa;
+        margin-right: 20%;
+    }
+
+    .user-message {
+        background: #c8e6c9;
+        margin-left: 20%;
+        text-align: right;
+    }
+
+    .chat-form {
+        padding: 15px;
+        border-top: 1px solid #ddd;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .member-info {
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+
+    .member-info input {
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        flex: 1;
+        min-width: 120px;
+        transition: border-color 0.3s;
+    }
+
+    .member-info input:focus {
+        border-color: #74ebd5;
+        outline: none;
+    }
+
+    .input-group {
+        display: flex;
+        gap: 10px;
+    }
+
+    #user-input {
+        flex: 1;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        font-size: 14px;
+        transition: border-color 0.3s;
+    }
+
+    #user-input:focus {
+        border-color: #74ebd5;
+        outline: none;
+    }
+
+    button {
+        padding: 10px 20px;
+        background: #74ebd5;
+        border: none;
+        border-radius: 10px;
+        color: #fff;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
+
+    button:hover {
+        background: #acb6e5;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(10px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .chat-body::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    .chat-body::-webkit-scrollbar-thumb {
+        background: #acb6e5;
+        border-radius: 10px;
+    }
+</style>
+
 <body>
     <div class="chat-container">
         <div class="creators-header">
             <p>Created by: Jithendra (Reg No: 12316595) & Pradeep (Reg No: 12307758)</p>
         </div>
         <div class="chat-header">
-            <h1>Title: Tax Filling Guide</h1>
+            <h1>TaxWizard: Your Smart Filing Companion</h1>
         </div>
         <div class="chat-body" id="chat-body">
             {% for msg in chat_history %}
-                <div class="{{ 'bot-message' if msg.sender == 'bot' else 'user-message' }} message">
-                    {{ msg.text|safe }}
-                </div>
+            <div class="{{ 'bot-message' if msg.sender == 'bot' else 'user-message' }} message">
+                {{ msg.text|safe }}
+            </div>
             {% endfor %}
         </div>
         <div class="chat-form">
             <form id="chat-form">
                 <div class="input-group">
-                    <input type="text" id="user-input" name="user_input" placeholder="Type your answer here..." required>
+                    <input type="text" id="user-input" name="user_input" placeholder="Type your answer here..."
+                        required>
                     <button type="submit">Send</button>
                 </div>
             </form>
         </div>
     </div>
-    </body>
+
+    <script>
+        document.getElementById("chat-form").addEventListener("submit", function (event) {
+            event.preventDefault();
+
+            const userInput = document.getElementById("user-input").value;
+
+            addMessage("user", userInput);
+
+            fetch("/chat", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/x-www-form-urlencoded",
+                },
+                body: new URLSearchParams({
+                    "user_input": userInput,
+                    "member1_name": "Jithendra",
+                    "member1_regno": "XYZ123",
+                    "member2_name": "Pravveen",
+                    "member2_regno": "ABC456"
+                })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    const chatBody = document.getElementById("chat-body");
+                    chatBody.innerHTML = "";
+                    data.chat_history.forEach(msg => {
+                        addMessage(msg.sender, msg.text);
+                    });
+                    chatBody.scrollTop = chatBody.scrollHeight;
+                })
+                .catch(error => console.error("Error:", error));
+
+            document.getElementById("user-input").value = "";
+        });
+
+        function addMessage(sender, text) {
+            const chatBody = document.getElementById("chat-body");
+            const messageDiv = document.createElement("div");
+            messageDiv.className = sender === "bot" ? "bot-message message" : "user-message message";
+            messageDiv.innerHTML = text;
+            chatBody.appendChild(messageDiv);
+            chatBody.scrollTop = chatBody.scrollHeight;
+        }
+    </script>
+</body>
+
 </html>
