--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p>Created by: Jithendra (Reg No: 12316595) & Pradeep (Reg No: 12307758)</p>
         </div>
         <div class="chat-header">
-            <h1>TaxWizard: Your Smart Filing Companion</h1>
+            <h1>TATILE: TAX FILLING GUID</h1>
         </div>
         <div class="chat-body" id="chat-body">
 <!--             {% for msg in chat_history %} --><br>
